# swagger-ui-embed

./: .gitignore  Cargo.toml  bla.html  build.rs
src/: index.html  lib.rs
