[package]
name = "swagger-ui-embed"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "^3.1.0", optional = true}
include-base64 = { version = "0.1.0" }

[build-dependencies]
reqwest = { version = "0.12", features = [
    "blocking",
    "rustls-tls",
], default-features = false }

[features]
default = []
poem = ["dep:poem"]